force-app/src/objects/TR1__Action_Validator_Rule__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Actions__c</fullName>
        <description>The actions for which this rule will be enforced.</description>
        <inlineHelpText>The actions for which this rule will be enforced.</inlineHelpText>
        <label>Actions Targeted</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add_To_Call_List</fullName>
                </value>
                <value>
                    <fullName>Add_To_Longlist</fullName>
                </value>
                <value>
                    <fullName>Apply_To_Job</fullName>
                </value>
                <value>
                    <fullName>Create_Internal_Interview</fullName>
                </value>
                <value>
                    <fullName>Create_Powernote</fullName>
                </value>
                <value>
                    <fullName>Create_Sendout</fullName>
                </value>
                <value>
                    <fullName>Market_Candidate</fullName>
                </value>
                <value>
                    <fullName>Mass_Placement</fullName>
                </value>
                <value>
                    <fullName>Move_To_Stage</fullName>
                </value>
                <value>
                    <fullName>Reject_Unreject</fullName>
                </value>
                <value>
                    <fullName>Send_Email</fullName>
                </value>
                <value>
                    <fullName>Share_CV</fullName>
                </value>
                <value>
                    <fullName>Standard_Call_List_Email</fullName>
                </value>
                <value>
                    <fullName>Job_Lead_Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag that shows if this rule is active or not</description>
        <inlineHelpText>Flag that shows if this rule is active or not</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Behavior__c</fullName>
        <description>Behavior enforced at the checkpoint (Warning/ Block)</description>
        <inlineHelpText>Behavior enforced at the checkpoint (Warning/ Block)</inlineHelpText>
        <label>Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Warn</fullName>
                    <default>true</default>
                    <label>Warn</label>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Object_Name__c</fullName>
        <description>The object this rule applies to. It will be used as the FROM object of the query, together with the Where clause in this rule to query records breaking the rule.</description>
        <inlineHelpText>The object this rule applies to. It will be used as the FROM object of the query, together with the Where clause in this rule to query records breaking the rule.</inlineHelpText>
        <label>Object Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>TR1__Job__c</fullName>
                    <label>Job</label>
                </value>
                <value>
                    <fullName>TR1__Application_V2__c</fullName>
                    <label>Application</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Reason__c</fullName>
        <description>The values in this picklist should represent categories of rules that might be used to identify a generic rule scenario (for example: ‘ATS Rules’ , ‘Do Not Email’ etc).</description>
        <inlineHelpText>The values in this picklist should represent categories of rules that might be used to identify a generic rule scenario (for example: ‘ATS Rules’ , ‘Do Not Email’ etc).</inlineHelpText>
        <label>Rule Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>An action validation rule was broken</fullName>
                </value>
                <value>
                    <fullName>Candidate not Registered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Rule_Name__c</fullName>
        <description>Descriptive name of the specific rule (for example: ‘Block submit for unvetted Candidates’, ‘Market Candidate Exceptions’ etc)</description>
        <inlineHelpText>Descriptive name of the specific rule (for example: ‘Block submit for unvetted Candidates’, ‘Market Candidate Exceptions’ etc)</inlineHelpText>
        <label>Rule Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__SubActions__c</fullName>
        <description>Specifies which part of the chosen action(s) are targeted. Only applies to certain actions.</description>
        <inlineHelpText>Specifies which part of the chosen action(s) are targeted. Only applies to certain actions.</inlineHelpText>
        <label>Sub Actions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Internal Interview</fullName>
                </value>
                <value>
                    <fullName>Submittal</fullName>
                </value>
                <value>
                    <fullName>Send Out</fullName>
                </value>
                <value>
                    <fullName>Offer</fullName>
                </value>
                <value>
                    <fullName>Closing Report</fullName>
                </value>
                <value>
                    <fullName>Recipients</fullName>
                </value>
                <value>
                    <fullName>Resumes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Where_Clause__c</fullName>
        <description>The SOQL where clause used to query which records break this rule.</description>
        <inlineHelpText>The SOQL where clause used to query which records break this rule.</inlineHelpText>
        <label>Where Clause</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Action Validator Rule</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <columns>NAME</columns>
        <columns>TR1__Actions__c</columns>
        <columns>TR1__Active__c</columns>
        <columns>TR1__SubActions__c</columns>
        <columns>TR1__Behavior__c</columns>
        <columns>TR1__Rule_Name__c</columns>
        <columns>TR1__Reason__c</columns>
        <columns>TR1__Where_Clause__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AV-{0000}</displayFormat>
        <label>Action Validation Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Validator Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>